--- a/src/App.css
+++ b/src/App.css
@@ -5,38 +5,33 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body {
+  font-size: 18px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
+.container {
+  /* background-color: coral; */
   padding: 2em;
 }
 
-.read-the-docs {
-  color: #888;
+.input-text {
+  width: 90%;
+  height: 2rem;
+  border-radius: 6px;
+  padding: 6px 12px;
+  font-size: 1.5rem;
+}
+
+.output-container {
+  /* border: 1px solid #747bff; */
+  margin-top: 2rem;
+  width: 100%;
+}
+
+.output {
+  font-size: 30px;
+}
+
+.btn-container {
+  margin-top: 2rem;
 }
